[package]
name = "cryptocurrency"
version = "0.1.0"
authors = ["Jacob Hughes <j@jacobhughes.me>"]

[dependencies]
# Ring doesn't let us choose a hash function for Ed25519
#ring = "^0.12.1"
ed25519-dalek = "^0.5.0"
#blake2-rfc = "^0.2.18"
blake2 = "^0.7.0"
byteorder = "^1.2.1"
rand = "^0.4"

[patch.crates-io]
ed25519-dalek = { git = "https://github.com/exrook/ed25519-dalek" }
